--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     color: #fff;
 }
 
@@ -14,4 +14,4 @@
     background-color: #333;
     box-shadow: 0px 4px 11px -1px #4444;;
     
-} */
+}
