--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -1,17 +1,5 @@
-* {
-    color: #fff;
-}
-
-._Activity_67a0v_1 {
-    background-color: #111;
-}
-
-._QuestionContainer_ypayp_1 {
-    box-shadow: none;
-}
-
-._QuestionContainer_ypayp_1, ._QuestionScrollableContent_ypayp_24 {
-    background-color: #333;
-    box-shadow: 0px 4px 11px -1px #4444;;
-    
+body > div._DialogOverlay_mpmiz_53, body > div.spx-status-embed {
+    background-color: #ccf2;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
