--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -1,5 +1,49 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1
+    }
+    to {
+        opacity: 0
+    }
+}
+
 body > div._DialogOverlay_mpmiz_53, body > div.spx-status-embed {
-    background-color: #ccf2;
+    width: 100vw;
+    background-color: #ccd2;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+}
+
+div.spx-status-embed[id=open] {
+    animation: fadeIn 0.2s ease-out;
+}
+
+div.spx-status-embed[id=closed] {
+    animation: fadeOut 0.2s ease-out;
+}
+
+button#sliderContainer {           
+    width: 38px;
+    height: 20px;
+    border: 3px #888 solid;
+    background-color: #ccc;
+    border-radius: 30px;
+    transition: 0.25s ease-out;
+}
+
+button#sliderContainer > div {
+    height: inherit;
+    width: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    transition: 0.25s ease-out;
 }
