--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -31,19 +31,22 @@ div.spx-status-embed[id=closed] {
     animation: fadeOut 0.2s ease-out;
 }
 
-button#sliderContainer {           
-    width: 38px;
-    height: 20px;
-    border: 3px #888 solid;
-    background-color: #ccc;
-    border-radius: 30px;
-    transition: 0.25s ease-out;
+button.sliderContainer {           
+    width: 30px;
+    height: 16px;
+    border: 2px #2179de solid;
+    /* background: #3A80E7; */
+    /* background: linear-gradient(58deg, #3A80E7 0%, #4ba0fe 100%); */
+    background-color: #fff;
+    border-radius: 10px;
+    transition: 0.15s ease-out;
 }
 
-button#sliderContainer > div {
-    height: inherit;
-    width: 20px;
-    border-radius: 10px;
-    background-color: #fff;
-    transition: 0.25s ease-out;
+button.sliderContainer > div {
+    height: 12px;
+    width: 12px;
+    margin: 2px;
+    border-radius: 6px;
+    background-color: #2179de;
+    transition: 0.15s ease-out;
 }
