--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -37,7 +37,7 @@ button.sliderContainer {
     border: 2px #2179de solid;
     /* background: #3A80E7; */
     /* background: linear-gradient(58deg, #3A80E7 0%, #4ba0fe 100%); */
-    background-color: #fff;
+    background-color: inherit;
     border-radius: 10px;
     transition: 0.15s ease-out;
 }
@@ -56,18 +56,20 @@ div#theme {
 }
 
 div#theme > span {
+    background-color: inherit;
     min-width: 120px;
     display: flex;
     align-items: center;
 }
 
 input.radio {
-    background-color: #fff;
+    background-color: inherit;
     height: 16px;
     width: 16px;
 }
 
-input.radio::before {
+input.radio::after {
+    background-color: inherit;
     content: '';
     display: block;
     position: inherit;
@@ -75,7 +77,7 @@ input.radio::before {
     width: inherit;
     border-radius: 100px;
     position: relative;
-    border: 2px #2179de solid;
+    border: 3px #2179de solid;
 }
 
 div > label {
