--- a/css/sparxMathDark.css
+++ b/css/sparxMathDark.css
@@ -70,7 +70,7 @@ div._NameRandomiserBar_nm8mk_94, div._DialogButtonContainer_nm8mk_79 > button._B
 button._SelectTrigger_11j1p_1:hover, button._Tab_ppldj_11:hover[data-state="inactive"], a._Topic_1xxlk_59, 
 div._NameChooser_nm8mk_1 > button._ButtonBase_8cc92_1, div._ActivityDay_1f6w3_10 > div > a._Activity_1f6w3_1:hover, 
 div > span._Chip_1f6w3_81, span._CurriculumLevelChip_1f6w3_113, ol > li._IndependentLearningTaskItem_1slcq_237, 
-ol > li._IndependentLearningTaskItem_1slcq_237 > div._Pill_1slcq_283 {
+ol > li._IndependentLearningTaskItem_1slcq_237 > div._Pill_1slcq_283, div._InlineSlotOptions_15tna_1134 {
     background-color: #444;
     color: #eee;
     box-shadow: none;
