--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -16,15 +16,25 @@
     }
 }
 
-* {
-    transition: ease-out 0.05s;
+body > div._DialogOverlay_mpmiz_53 {
+    background-color: #ccd2;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
-body > div._DialogOverlay_mpmiz_53, body > div.spx-status-embed {
+body > div.spx-status-embed {
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
     width: 100vw;
     background-color: #ccd2;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+}
+
+#whiteboardButton {
+    cursor: pointer;
 }
 
 div.spx-status-embed[id=open] {
