--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -27,10 +27,19 @@ body > div.spx-status-embed {
     left: 0;
     position: fixed;
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     background-color: #ccd2;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+}
+
+body > div.spx-status-embed > * {
+    display: contents;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 #whiteboardButton {
