--- a/css/sparxMath.css
+++ b/css/sparxMath.css
@@ -35,11 +35,16 @@ body > div.spx-status-embed {
     backdrop-filter: blur(5px);
 }
 
-body > div.spx-status-embed > * {
-    display: contents;
+.whiteboard {
     position: fixed;
+    display: flex;
     top: 0;
     left: 0;
+    background-color: #f00;
+    width: 300px;
+    height: 300px;
+    z-index: 100;
+    opacity: 1;
 }
 
 #whiteboardButton {
@@ -48,6 +53,7 @@ body > div.spx-status-embed > * {
 
 div.spx-status-embed[id=open] {
     animation: fadeIn 0.2s ease-out;
+    opacity: 1;
 }
 
 div.spx-status-embed[id=closed] {
