--- a/css/sparxMathDark.css
+++ b/css/sparxMathDark.css
@@ -174,7 +174,7 @@ h1._PageTitle_5juaj_285, span._Date_1f6w3_166, p._Message_1ykjo_17, div._Message
 div._IndependentLearningPackageTitle_1slcq_145, ol._IndependentLearningTasks_1slcq_71 > li._IndependentLearningTask_1slcq_71 > div._IndependentLearningTaskTitle_1slcq_160, 
 span._CurriculumLevelChip_1f6w3_113, ol > li._IndependentLearningTaskItem_1slcq_237 > div._IndependentLearningTaskItemName_1slcq_279, 
 nav._Breadcrumb_1slcq_12._FontLg_1kb5t_10 > span > a._BreadcrumbLink_1kb5t_1, span._Title_1slcq_26, 
-span._Code_1slcq_41, span > span._BreadcrumbText_1kb5t_18, ._NoTopicLinksMessage_1slcq_126 span._TextElement_dp3zo_80 {
+span._Code_1slcq_41, span > span._BreadcrumbText_1kb5t_18, ._NoTopicLinksMessage_1slcq_126, ._TextElement_dp3zo_80 {
     color: #ddd;
 }
 
